--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+numpy~=1.26.4
+matplotlib~=3.8.4
+requests~=2.31.0
+reportlab~=4.2.0
+embermaker>=2.0.1
 wheel
-numpy
 setuptools
-matplotlib
-requests
